First cut of bearer support
