# test-app/config/routes.rb
@@ -5,6 +5,7 @@ TestApp::Application.routes.draw do
   post 'auth-tests/basic', to: 'auth_tests#basic'
   post 'auth-tests/api-key', to: 'auth_tests#api_key'
   post 'auth-tests/basic-and-api-key', to: 'auth_tests#basic_and_api_key'
+  post 'auth-tests/bearer', to: 'auth_tests#bearer'
 
   mount Rswag::Api::Engine => 'api-docs'
   mount Rswag::Ui::Engine => 'api-docs'
